--- a/index.html
+++ b/index.html
@@ -11,13 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <!-- Normalize.css -->
-    <link rel="stylesheet" href="/src/assets/css/normalize.css" />
-    <!-- FontAwesome all.min.css -->
-    <link
-      rel="stylesheet"
-      href="/src/assets/fonts/fontawesome/css/all.min.css"
-    />
+    <!-- import all css files as static files inside main.tsx -->
     <!-- index.css added by React ts import statement -->
   </head>
   <body>
